# asset-importer

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  README.md  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: parse-version.sh
.github/workflows/: ci.yml  prebuilt-binaries.yml  release-plz.yml
asset-importer/: CHANGELOG.md  Cargo.toml
asset-importer-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.cpp  wrapper.h
asset-importer-sys/build_support/: bindings.rs  bridge.rs  config.rs  mod.rs  plan.rs  prebuilt.rs  system.rs  system_deps.rs  util.rs  vendored.rs
asset-importer-sys/examples/: basic_test.rs
asset-importer-sys/src/: bindings_pregenerated.rs  lib.rs  test.rs  types.rs
asset-importer/examples/: 01_quickstart.rs  02_formats.rs  03_scene.rs  04_materials.rs  05_animations.rs  06_convert.rs  07_mint_integration.rs  08_zero_copy_mesh.rs  09_custom_io_memory_fs.rs  10_multithreading.rs  11_glam_integration.rs  12_parallel_mesh_stats.rs  13_progress_cancel.rs  14_memory_import.rs  15_embedded_textures.rs  16_skinning_weights.rs  17_node_world_transforms.rs  18_material_texture_chain.rs  19_property_store_profiles.rs  README.md  advanced_features_demo.rs  advanced_material_properties.rs  batch_process.rs  common.rs  complete_feature_showcase.rs  convert_model.rs  format_info.rs  importer_discovery_demo.rs  model_loading_demo.rs  morph_animation_inspector.rs  pbr_material_inspector.rs  russimp_compatible_interface.rs  simple_load.rs
asset-importer/examples/common/: mod.rs
asset-importer/examples/models/: box_converted.ply
asset-importer/src/: aabb.rs  animation.rs  bone.rs  bridge_properties.rs  camera.rs  error.rs  exporter.rs  ffi.rs  importer.rs  importer_desc.rs  io.rs  lib.rs  light.rs  logging.rs  material.rs  math.rs  mesh.rs  metadata.rs  node.rs  postprocess.rs  progress.rs  ptr.rs  raw.rs  scene.rs  texture.rs  types.rs  utils.rs
asset-importer/tests/: assimp_compatibility_tests.rs  async_support.rs  enhanced_features_tests.rs  ffi_panic_safety.rs  file_import_tests.rs  gltf_regression_tests.rs  multithreading.rs  zero_copy_views.rs
asset-importer/tests/models/: textured.mtl
docs/workstreams/assimp-6.0.5-upgrade/: README.md  design.md  milestones.md  refactor-plan.md
