[workspace]
members = ["asset-importer-sys", "asset-importer"]
resolver = "2"

# Exclude workspace-level development files from all packages
exclude = [
    "repo-ref/",
    "tests/",
    "target/",
    "*.tmp",
    "*.log",
    "*.bak",
    "*~",
    ".DS_Store",
    "Thumbs.db",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Mingzhen Zhuang <superfrankie621@gmail.com>"]
license-file = "LICENSE"
description = "Comprehensive Rust bindings for the Assimp library"
homepage = "https://github.com/Latias94/asset-importer"
repository = "https://github.com/Latias94/asset-importer"
keywords = ["assimp", "3d", "mesh", "animation", "graphics"]
