[package]
name = "asset-importer-sys"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Low-level FFI bindings for the Assimp 3D asset import library"
homepage = "https://github.com/Latias94/asset-importer"
repository = "https://github.com/Latias94/asset-importer"
documentation = "https://docs.rs/asset-importer-sys"
categories = ["external-ffi-bindings", "rendering"]
keywords = ["assimp", "3d", "ffi", "bindings"]
build = "build.rs"
links = "assimp"

# Exclude unnecessary files to reduce package size
exclude = [
    # Assimp test and development files
    "assimp/test/",
    "assimp/samples/",
    "assimp/tools/",
    "assimp/doc/",
    "assimp/build/",

    # Exclude non-essential contrib libraries (keep zlib, pugixml, rapidjson, etc.)
    "assimp/contrib/googletest/",
    "assimp/contrib/android-cmake/",
    "assimp/contrib/meshlab/",

    # Git and CI files
    "assimp/.git/",
    "assimp/.github/",
    "assimp/.gitignore",
    "assimp/.gitmodules",
    "assimp/.clang-format",
    "assimp/.travis.yml",
    "assimp/appveyor.yml",

    # Language ports (not needed for Rust bindings)
    "assimp/port/",

    # Scripts and utilities
    "assimp/scripts/",
    "assimp/packaging/",
    "assimp/fuzz/",

    # Development files
    "assimp/Dockerfile",
    "assimp/CMakePresets.json",
    "assimp/BUILDBINARIES_EXAMPLE.bat",

    # Our own development files
    "examples/",
    "*.md",
    "target/",

    # Temporary and backup files
    "*.tmp",
    "*.log",
    "*.bak",
    "*~",
    ".DS_Store",
    "Thumbs.db",
]

# Disable doctests for generated bindings to avoid C-style code examples
[lib]
doctest = false

[[bin]]
name = "package"
path = "bin/package/main.rs"
required-features = ["build-assimp", "package"]

[dependencies]
mint = { version = "0.5", optional = true }
# For `package` binary only
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

[build-dependencies]
bindgen = { version = "0.72", optional = true }
cc = "1.0"
cmake = "0.1"
pkg-config = { version = "0.3", optional = true }
vcpkg = { version = "0.2", optional = true }
# Prebuilt binary support (download + extract) is only needed when `prebuilt` is enabled.
ureq = { version = "3.1", default-features = false, features = ["rustls"], optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

[features]
default = []
# Enable mint math library integration
mint = ["dep:mint"]
# Enable type extensions with convenience methods
type-extensions = []
# Enable export functionality (includes more symbols)
export = []

# Generate Rust bindings at build time using `bindgen`.
#
# By default this crate ships pregenerated bindings matching the vendored Assimp version.
# Enabling `generate-bindings` is required for `system` builds (so the bindings match the
# system headers you are linking against).
generate-bindings = ["dep:bindgen"]

# Use system-installed assimp instead of bundled
system = ["pkg-config", "vcpkg"]
# Build assimp from source (explicit feature)
build-assimp = []
# Enable the `package` binary
package = ["dep:tar", "dep:flate2"]
# Use prebuilt binaries (requires release artifacts)
prebuilt = ["dep:ureq", "dep:tar", "dep:flate2"]
# Control zlib linking
nozlib = []
static-link = []

[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]
