[package]
name = "asset-importer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Comprehensive Rust bindings for the Assimp 3D asset import library"
homepage = "https://github.com/Latias94/asset-importer"
repository = "https://github.com/Latias94/asset-importer"
documentation = "https://docs.rs/asset-importer"
categories = [
    "rendering",
    "external-ffi-bindings",
    "game-engines",
    "multimedia",
    "graphics",
]
keywords = ["assimp", "3d", "mesh", "animation", "graphics"]
readme = "README.md"
exclude = ["examples/models/", "tests/models/"]

[dependencies]
asset-importer-sys = { path = "../asset-importer-sys", version = "0.1.0" }
thiserror = "2.0"
bitflags = "2.0"
glam = "0.30"
mint = { version = "0.5", optional = true }

[features]
default = []
# Enable mint math library integration (for interop with other math libs)
mint = ["dep:mint", "asset-importer-sys/mint"]
# Enable export functionality
export = ["asset-importer-sys/export"]
# Enable static linking
static = ["asset-importer-sys/static"]
# Enable system assimp (instead of bundled)
system = ["asset-importer-sys/system"]
# Build assimp from source
build-assimp = ["asset-importer-sys/build-assimp"]

[dev-dependencies]
approx = "0.5"
