[package]
name = "asset-importer"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Comprehensive Rust bindings for the Assimp library"
homepage = "https://github.com/Latias94/asset-importer"
repository = "https://github.com/Latias94/asset-importer"
documentation = "https://docs.rs/asset-importer"
categories = [
    "rendering",
    "external-ffi-bindings",
    "game-engines",
    "multimedia",
    "graphics",
]
keywords = ["assimp", "3d", "mesh", "animation", "graphics"]
readme = "../README.md"
exclude = [
    # Development and example files
    "examples/",
    "tests/models/",

    # IDE configuration files
    ".vscode/",
    ".idea/",

    # Build and temporary files
    "target/",
    "*.tmp",
    "*.log",
    "*.bak",
    "*~",

    # System files
    ".DS_Store",
    "Thumbs.db",

    # Documentation (except README which is included via readme field)
    "*.md",
]

[dependencies]
asset-importer-sys = { path = "../asset-importer-sys", version = "0.2" }
thiserror = "2.0"
bitflags = "2.0"
glam = "0.30"
mint = { version = "0.5", optional = true }

[features]
default = ["prebuilt"]

# Math library integrations
mint = ["dep:mint", "asset-importer-sys/mint"]

# Functionality features
export = ["asset-importer-sys/export"]
type-extensions = ["asset-importer-sys/type-extensions"]

# Build method features (mutually exclusive)
# Use prebuilt binaries (default, fastest)
prebuilt = ["asset-importer-sys/prebuilt"]
# Build assimp from source (slower but most compatible)
build-assimp = ["asset-importer-sys/build-assimp"]
# Use system-installed assimp
system = ["asset-importer-sys/system"]

# Linking options
static-link = ["asset-importer-sys/static-link"]
nozlib = ["asset-importer-sys/nozlib"]

[dev-dependencies]
approx = "0.5"

# Example dependencies for the model loading demo
[[example]]
name = "model_loading_demo"
path = "examples/model_loading_demo.rs"

[dev-dependencies.winit]
version = "0.30"

[dev-dependencies.glow]
version = "0.14"

[dev-dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dev-dependencies.glam]
version = "0.30"

[dev-dependencies.bytemuck]
version = "1.0"
features = ["derive"]

[dev-dependencies.glutin]
version = "0.32"

[dev-dependencies.glutin-winit]
version = "0.5"

[dev-dependencies.raw-window-handle]
version = "0.6"

[dev-dependencies.gl]
version = "0.14"

[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = ["type-extensions"]
rustdoc-args = ["--cfg", "docsrs"]
