[package]
name = "asset-importer"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Comprehensive Rust bindings for the Assimp library"
homepage = "https://github.com/Latias94/asset-importer"
repository = "https://github.com/Latias94/asset-importer"
documentation = "https://docs.rs/asset-importer"
categories = [
    "rendering",
    "external-ffi-bindings",
    "game-engines",
    "multimedia",
    "graphics",
]
keywords = ["assimp", "3d", "mesh", "animation", "graphics"]
readme = "../README.md"
exclude = [
    # Development and example files
    "examples/",
    "tests/models/",

    # IDE configuration files
    ".vscode/",
    ".idea/",

    # Build and temporary files
    "target/",
    "*.tmp",
    "*.log",
    "*.bak",
    "*~",

    # System files
    ".DS_Store",
    "Thumbs.db",

    # Documentation (except README which is included via readme field)
    "*.md",
]

[dependencies]
asset-importer-sys = { path = "../asset-importer-sys", version = "0.3" }
thiserror = "2.0"
bitflags = "2.0"
glam = "0.30"
mint = { version = "0.5", optional = true }
bytemuck = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = ["prebuilt"]

# Expose the raw `asset-importer-sys` bindings as `asset_importer::sys`.
# Keeping this opt-in reduces the chance of users accidentally violating the safe API's immutability/threading contract.
raw-sys = []

# Math library integrations
mint = ["dep:mint", "asset-importer-sys/mint"]
bytemuck = ["dep:bytemuck"]
# Enable `bytemuck::{Pod, Zeroable}` for glam math types as well.
glam-bytemuck = ["bytemuck", "glam/bytemuck"]
# Convenience meta-feature for rendering backends: raw byte views + glam Pod.
gpu = ["bytemuck", "glam-bytemuck"]

# Functionality features
export = ["asset-importer-sys/export"]
type-extensions = ["asset-importer-sys/type-extensions"]

# Build method features (mutually exclusive)
# Use prebuilt binaries (default, fastest)
prebuilt = ["asset-importer-sys/prebuilt"]
# Build assimp from source (slower but most compatible)
build-assimp = ["asset-importer-sys/build-assimp"]
# Use system-installed assimp
system = ["asset-importer-sys/system", "asset-importer-sys/generate-bindings"]

# Linking options
static-link = ["asset-importer-sys/static-link"]
nozlib = ["asset-importer-sys/nozlib"]

# Testing features
tokio = ["dep:tokio"]

[dev-dependencies]
approx = "0.5"
tokio = { version = "1.0", features = ["full"] }

# Example dependencies for the model loading demo
[[example]]
name = "model_loading_demo"
path = "examples/model_loading_demo.rs"



[dev-dependencies.winit]
version = "0.30"

[dev-dependencies.glow]
version = "0.14"

[dev-dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dev-dependencies.glam]
version = "0.30"

[dev-dependencies.bytemuck]
version = "1.0"
features = ["derive"]

[dev-dependencies.glutin]
version = "0.32"

[dev-dependencies.glutin-winit]
version = "0.5"

[dev-dependencies.raw-window-handle]
version = "0.6"

[dev-dependencies.gl]
version = "0.14"

[package.metadata.docs.rs]
no-default-features = true
all-features = false
features = ["type-extensions"]
rustdoc-args = ["--cfg", "docsrs"]
